Made a few more modifications. Changed sticky footer from Bootstrap\'s class to a simple position:fixed bottom:0 because when the links wrapped under the copyright, the footer scrolls.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ div.col-sm-3 img.portfolioImg {
 
 .headerFont {
     font-family: 'Volkhov', serif;
-    font-size: 30px;
+    font-size: 26px;
     font-weight: bold;
 }
 
@@ -24,6 +24,14 @@ div.col-sm-3 img.portfolioImg {
 .round {
     border-radius: 50%;
     shape-outside: circle(50%);
+}
+
+.socialLink {
+    opacity: 0.5;
+}
+
+.socialLink:hover {
+    opacity: 0.8;
 }
 
 .topNav {
@@ -38,6 +46,7 @@ div.col-sm-3 img.portfolioImg {
 }
 
 #footerBar {
+    position: fixed;
     bottom: 0;
     width: 100%;
     padding: 0;
